--- a/styles.css
+++ b/styles.css
@@ -190,10 +190,16 @@ body {
 }
 
 .code {
+  font-size: 13;
   width: 1px;
   white-space: nowrap;
   border-bottom: 1px solid #1b456b;
   font-family: 'Courier New', Courier, monospace;
+  
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
 
 .copy-icon {
