Refactoring and dot's animation

--- a/bot-auto-test/main.css
+++ b/bot-auto-test/main.css
@@ -35,6 +35,7 @@ body {
   font-family: 'Courier New', Courier, monospace;
   text-align: center;
   min-width: calc(100% - 20px);
+  min-height: 30px;
 }
 
 .chat-window-header {
