ignore line breaks

--- a/bot-auto-test/main.css
+++ b/bot-auto-test/main.css
@@ -397,6 +397,10 @@ textarea.command-param {
   margin-left: auto;
 }
 
-.command-param-check-label {
+.command-param-check {
+  cursor: pointer;
+}
+
+.command-param-check.lbl {
   font-family: monospace;
 }
