--- a/bot-auto-test/main.css
+++ b/bot-auto-test/main.css
@@ -624,3 +624,31 @@ div.h-separator {
 .param-button-img:hover {
   filter: none;
 }
+
+/* ========    popup  ========= */
+.popup-container-copied {
+  display: none; 
+  background: rgba(0, 0, 0, 0.25);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity:0;
+  transition: opacity 0.3s;
+}
+
+.popup-message-copied {
+  width: 400px;
+  height: 100px;
+  border-radius: 15px;
+  position: relative;
+  left: calc(50% - 200px);
+  top: calc(50% - 50px);
+  text-align: center;
+  line-height: 100px;
+  font-size: 28px;
+  border: 5px solid #102840;
+  background: #153755;
+  color: #ecf4fa;
+}
