--- a/bot-auto-test/main.css
+++ b/bot-auto-test/main.css
@@ -86,7 +86,7 @@ body {
 .chat-bot-msg-text.error {
   background-color: #ff000078 !important;
 }
-.chat-bot-msg-text.debgug {
+.chat-bot-msg-text.debug {
   background-color: #ffee0078 !important;
 }
 
